Add very pretty button to create new entry in Games database

--- a/WebApplication/WebApp/WebApp/Pages/Games/Index.cshtml
+++ b/WebApplication/WebApp/WebApp/Pages/Games/Index.cshtml
@@ -8,8 +8,7 @@
 <h1>Database</h1>
 
 <p>
-    <button type="button" onclick=asp-page="Create">Create New</button>
-    <a asp-page="Create">Create New</a> 
+    <a class="btn btn-primary" asp-page="Create">Create new entry</a> 
 </p>
 <table class="table">
     <thead>
